--- a/.github/workflows/translation.yml
+++ b/.github/workflows/translation.yml
@@ -22,34 +22,42 @@ jobs:
               with:
                   node-version: '14.x'
 
-            - run: npm i -g @crowdin/cli
-            - run: npm ci
-
             - uses: olegtarasov/get-tag@v2.1
               id: tagName
-
             - name: Extract, Upload and Download from Crowdin Platform
-              run: branch_name="deriv-com-translations"
+              run: branch_name="deriv_com_translations"
 
                   echo "Setting up Git identity"
                   git config --global user.name "DerivFE"
                   git config --global user.email "80095553+DerivFE@users.noreply.github.com"
 
+                  echo "Installing Crowdin CLI"
+                  sudo npm i -g @crowdin/cli
+
                   echo "Checking out new branch [$branch_name]"
                   git checkout -b "$branch_name"
 
                   echo "Running the translation script (extract-translations.js)"
+                  cd $(git rev-parse --show-toplevel)/scripts
                   npm run translate:extract
                   cd $(git rev-parse --show-toplevel)
 
+                  # Uncomment these after testing completed
+                  # echo "Uploading new strings to Crowdin"
+                  # crowdin upload sources -b crowdin
+
                   echo "Downloading new strings to Crowdin"
                   npm run translate:download -T ${{ secrets.CROWDIN_API_KEY }}
+
+                  # Commit the newly downloaded files
                   cd $(git rev-parse --show-toplevel)
                   git add .
                   git commit -m "Update Translations 📚 - $GIT_TAG_NAME"
 
-                  git push origin HEAD:deriv-com-translations --force
+                  # Force push to this branch in case a previous run created it.
+                  git push --set-upstream origin "$branch_name" -f
 
+                  # Creating PR 
                   sudo apt install gh
                   gh auth login --with-token <<< ${{ secrets.PERSONAL_ACCESS_TOKEN }}
                   gh pr close "$branch_name" || true
